<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimen_8"
   >

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewSplits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toTopOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/dimen_8">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiLayoutDropDownSplitDistance"
                style="@style/DropDownInputLayoutTheme"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/distance_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <AutoCompleteTextView
                    android:id="@+id/dropDownSplitDistanceSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiLayoutDropDownFrequency"
                style="@style/DropDownInputLayoutTheme"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8"
                android:hint="@string/frequency_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tiLayoutDropDownSplitDistance">

                <AutoCompleteTextView
                    android:id="@+id/dropDownFrequencySpinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <include
                android:id="@+id/layoutSplitsDuration"
                layout="@layout/layout_textviews_hour_minutes_seconds"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tiLayoutDropDownFrequency" />

            <com.google.android.material.slider.Slider
                android:id="@+id/splitsDurationSlider"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8"
                android:stepSize="5.0"
                android:value="@string/slide_start_value"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutSplitsDuration" />



        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>


    <include
        android:id="@+id/layoutSplitRecyclerView"
        layout="@layout/layout_splits_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dimen_8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardViewSplits" />


</androidx.constraintlayout.widget.ConstraintLayout>