<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="activities_for_pace_calculator">
        <item>Running 5km</item>
        <item>Running 10km</item>
        <item>Running Half Marathon</item>
        <item>Running Full Marathon</item>
        <item>Sprint Triathlon</item>
        <item>Olympic Triathlon</item>
        <item>Half Distance Triathlon</item>
        <item>Full Distance Triathlon</item>
    </string-array>

    <string-array name="zones_for_zones_calculator">
        <item>Lactate Threshold Heart Rate</item>
        <item>Functional Threshold Power</item>
        <item>Swim Pace</item>
    </string-array>

    <string-array name="distances_for_splits_calculator">
        <item>1500 meters</item>
        <item>3km</item>
        <item>5km</item>
        <item>10km</item>
        <item>Half Marathon</item>
        <item>Full Marathon</item>
    </string-array>

    <string-array name="sports">
        <item>Run</item>
        <item>Bike</item>
    </string-array>

    <string-array name="splits_frequency">
        <item>Split each 100m</item>
        <item>Split each 400m</item>
        <item>Split each 1km</item>
        <item>Split each 3km</item>
        <item>Split each 5km</item>
        <item>Split each 10km</item>
    </string-array>

</resources>