<resources>
    <string name="app_name">Endurance Pace Calculator</string>

    // Tabs labels
    <string name="pace_calculator_tab_label">Pace</string>
    <string name="zones_calculator_tab_label">Zones</string>
    <string name="splits_calculator_tab_label">Splits</string>


    //Base drop down labels
    <string name="activities_label">Activity</string>
    <string name="zones_label">Choose method</string>
    <string name="distance_label">Distance</string>
...
