<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/layoutHRZonesHeader"
        layout="@layout/layout_heart_rate_zones_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <include
        android:visibility="gone"
        android:id="@+id/layoutPowerZonesHeader"
        layout="@layout/layout_power_zones_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <include
        android:visibility="gone"
        android:id="@+id/layoutSwimPaceZonesHeader"
        layout="@layout/layout_swim_pace_zones_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/dimen_4"
        android:background="@android:color/darker_gray"
        android:layout_marginVertical="@dimen/dimen_24" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/zonesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/separator"
        tools:listitem="@layout/layout_zones_list_item" />

</androidx.constraintlayout.widget.ConstraintLayout>